fixed letter spacing and line height for projects section

--- a/style.css
+++ b/style.css
@@ -209,6 +209,8 @@ p {
     text-align: justify;
     justify-content: space-between;
     color: rgba(0, 0, 0, 0.85);
+    line-height: 1.5rem;
+    letter-spacing: 0.04rem;
 }
 
 .section__card--content p {
